# task-management

./: README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: install-apple-calendar-mcp.md  setup.md  today.md
config/: config.template.yaml
docs/superpowers/plans/: 2026-06-28-email-daily-schedule.md
docs/superpowers/specs/: 2026-06-28-email-today-schedule-design.md
scripts/: archive-tasks.py  calendar_apple.py  config.py  email_schedule.py  generate-daily-files.py  install-apple-calendar-mcp.py
tests/: test_calendar_apple.py  test_config.py  test_email_schedule.py  test_generate_daily_files.py
